addded more recipes

--- a/recipes/shawarma.html
+++ b/recipes/shawarma.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Lasagna</h1>
-    <img src="lasagna.jpeg" alt="lasagna">
-    <h2>Ready Lasagna</h2>
+    <h1>Shawarma</h1>
+    <img src=>
+    <h2>Ready shawarma</h2>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio repellendus repellat expedita deserunt, placeat, odio reiciendis ex, iusto ipsa vel eligendi architecto dolores doloremque laborum hic id illum excepturi aliquid?</p>
     <h1>Ingredients</h1>
     <ul>
