--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Recipes</a>
+   <ul>
+    <li> <a href="recipes/lasagna.html">lasagna</a></li>
+    <li><a href="recipes/kebab.html">Kebab</a></li>
+    <li><a href="recipes/shawarma.html">shawaema</a></li>
+   </ul>
 </body>
 </html>
